chore: rebrand from Bali Renovation OS to Bangun

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bali-renovation-os-frontend",
+  "name": "bangun-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
