--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,15 +3,10 @@
 
 [build]
 builder = "nixpacks"
-
-[build.nixpacksPlan.phases.setup]
-nixPkgs = ["python312"]
-
-[build.nixpacksPlan.phases.install]
-cmds = ["pip install -r requirements.txt"]
+buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 healthcheckPath = "/api/v1/health"
 healthcheckTimeout = 30
 restartPolicyType = "on_failure"
