--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,8 @@ httpx>=0.26.0
 structlog>=24.1.0
 python-dotenv>=1.0.0
 cryptography>=42.0.0
+openpyxl>=3.1.0
+pymupdf>=1.24.0
 apscheduler>=3.10.0
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
